--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 # Backend
-BACKEND_HOST=0.0.0.0
-BACKEND_PORT=8000
+# Put this in repo root .env (do NOT commit the real key)
+FIRMS_MAP_KEY=your_firms_key_here
 
-# Frontend calls the backend here
+# Frontend calls the backend here (place in frontend/.env.local)
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
