--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,26 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "@mui/material": "^5.14.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.0",
-    "react-apexcharts": "^1.4.0",
+    "@mui/material": "^5.14.0",
+    "@mui/x-data-grid": "^8.10.2",
     "apexcharts": "^3.44.0",
     "leaflet": "^1.9.4",
+    "next": "14.0.0",
+    "react": "^18",
+    "react-apexcharts": "^1.4.0",
+    "react-dom": "^18",
     "react-leaflet": "^4.2.1",
     "swr": "^2.2.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/leaflet": "^1.9.8",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "14.0.0",
+    "typescript": "^5"
   }
 }
