--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 # Backend
-# Put this in repo root .env (do NOT commit the real key)
-FIRMS_MAP_KEY=your_firms_key_here
+# Note: This project now uses real NASA FIRMS data from local CSV files
+# No API key is required - ensure DL_FIRE_* zip files are extracted to data/firms/
 
 # Frontend calls the backend here (place in frontend/.env.local)
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
